# sdl3-opengl

./: .gitignore  CMakeLists.txt  README.md  build.sh  gen_tags.sh  setup_toolchain.sh  tags.sh
client/: CMakeLists.txt  build.sh  bzip2.c  bzip2.h  client.c  client.h  file_stream.c  file_stream.h  jagfile.c  jagfile.h  jpeg.c  jpeg.h  packet.c  packet.h  pix2d.c  pix2d.h  pix32.c  pix32.h  pix3d.c  pix3d.h  pix8.c  pix8.h  pix_font.c  pix_font.h  pix_map.c  pix_map.h  util.c  util.h  world.c  world.h  world3d.c  world3d.h  x.h
client/platform/sdl3/: platform.c  platform.h
src/: CMakeLists.txt  build.sh  gl.c  gl.h  sdl3-opengl.c
toolchain/: recipe.sh  release
toolchain/recipes/: bison  bzip2  cmake  gawk  gmp  grep  gzip  libexpat  m4  make  meson  mpc  mpfr  pkgconf  python  samurai  sed  wayland-protocols  wayland-scanner  xz
toolchain/recipes/aarch64-linux-gnu-gcc/: aarch64-linux-gnu-gcc  aarch64-linux-gnu-gcc_libdecor  aarch64-linux-gnu-gcc_libffi  aarch64-linux-gnu-gcc_libpipewire  aarch64-linux-gnu-gcc_libxkbcommon  aarch64-linux-gnu-gcc_sdl3  aarch64-linux-gnu-gcc_sysroot  aarch64-linux-gnu-gcc_wayland
toolchain/recipes/aarch64-w64-mingw32-gcc/: aarch64-w64-mingw32-gcc  aarch64-w64-mingw32-gcc_sdl3  aarch64-w64-mingw32-gcc_sysroot
toolchain/recipes/i686-linux-gnu-gcc/: i686-linux-gnu-gcc  i686-linux-gnu-gcc_libdecor  i686-linux-gnu-gcc_libffi  i686-linux-gnu-gcc_libpipewire  i686-linux-gnu-gcc_libxkbcommon  i686-linux-gnu-gcc_sdl3  i686-linux-gnu-gcc_sysroot  i686-linux-gnu-gcc_wayland
toolchain/recipes/i686-w64-mingw32-gcc/: i686-w64-mingw32-gcc  (+2 more)
(+50 files in other folders)
